--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.9"
+    "framer-motion": "^11.5.4",
+    "next": "14.2.9",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-responsive": "^10.0.0",
+    "swiper": "^11.1.12"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
